deployment/templates/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: $NAMESPACE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  namespace: $NAMESPACE
  labels:
    app: $APP_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $APP_NAME
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      containers:
        - name: $APP_NAME
          image: $IMAGE:$VERSION
          imagePullPolicy: Always
          volumeMounts:
            - name: $APP_NAME-properties
              mountPath: "/etc/config"
              readOnly: true
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP     
      volumes:
        - name: $APP_NAME-properties
          secret:
            secretName: $APP_NAME-properties
            defaultMode: 420
